src/ContentWrapper.css
/* LAYOUT */

.content-wrapper, .content-heading-wrapper {
  max-width: 840px;
  /* NOTE: CSS will collapse the margins of adjacent divs - the space between will be 100 */
  margin: 100px auto;
}

.content-wrapper {
  display: flex;
  justify-content: space-between;
}

.content-heading-wrapper {
  padding: 0 40px;
}

.content-heading {
  margin-bottom: 1.5rem;
}

.content-img-wrapper, .content-caption {
  margin-left: 40px;
}
.content-img-wrapper:first-child, .content-caption:first-child {
  margin: 0;
}

@media all and (max-width: 500px) {
    .content-wrapper {
      flex-direction: column;
    }
    .content-wrapper .content-img-wrapper, .content-wrapper .content-caption {
      margin: 0 40px;
      margin-bottom: 100px; /* Vertical spacing between each image on mobile */
    }
    .content-img-wrapper:last-child, .content-caption:last-child {
      margin-bottom: 0;
    }
}

/* IMAGES */

.content-img-wrapper {
  display: flex;
  flex-direction: column;
  flex-basis: 50%;
  min-width: 220px;
  max-width: 400px;
}

.content-img {
  width: 100%;
}

.shadowed-img {
  box-shadow: 0 24px 50px 0 rgba(0,0,0,0.05),0 18px 30px 0 rgba(0,0,0,0.02);
}

/* TEXT */

.content-mini-caption {
  margin: 0.5rem auto;
  font-size: 0.75em;
  color: #717994;
}

.content-caption {
  flex-basis: 50%;
  max-width: 400px;
}

.content-caption h1 {
  font-weight: 700;
}

.content-caption h2 {
  margin-top: 0;
  margin-bottom: 24px;
}

.content-desc {
  line-height: 175%;
}

/* MAGIC */

@keyframes hideImg {
    0%   {opacity: 0;}
    25%  {opacity: 0;}
    50%  {opacity: 0;}
    75%  {opacity: 0;}
    99%  {opacity: 0;}
    100% {opacity: 1;}
}

.tileImg {
  /* Hide this img for 0.3s to allow the tile image animation to complete */
  animation-name: hideImg;
  animation-duration: 0.3s;
  animation-fill-mode: both;
  border-radius: 5px;
}

